--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
         .notice-bar { background: #003d82; color: white; padding: 10px 15px; margin: 10px; border-radius: 4px; font-size: 13px; text-align: center; }
         
-        /* স্লাইডার স্টাইল */
         .banner-container { padding: 0 10px; margin-bottom: 20px; }
         .swiper { width: 100%; height: 160px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
         .swiper-slide img { width: 100%; height: 100%; object-fit: cover; }
@@ -96,8 +95,8 @@
 
         .login-card { background: white; padding: 30px 20px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); margin: 20px; }
         .login-title { font-size: 24px; font-weight: 700; margin-bottom: 25px; text-align: left; }
-        .google-login-btn { width: 100%; background: white; border: 1px solid #ddd; padding: 12px; border-radius: 8px; display: flex; align-items: center; justify-content: center; gap: 10px; font-weight: 600; cursor: pointer; margin-bottom: 20px; }
-        .google-login-btn img { width: 20px; }
+        .google-login-btn { width: 100%; background: white; border: 1px solid #ddd; padding: 12px; border-radius: 8px; display: flex; align-items: center; justify-content: center; gap: 10px; font-weight: 600; cursor: pointer; margin-bottom: 20px; font-size: 14px; }
+        .google-login-btn img { width: 22px; height: 22px; }
         .divider { display: flex; align-items: center; text-align: center; margin: 20px 0; color: #888; font-size: 14px; }
         .divider::before, .divider::after { content: ''; flex: 1; border-bottom: 1px solid #eee; }
         .login-input-group { margin-bottom: 15px; text-align: left; }
@@ -156,7 +155,10 @@
         <div id="auth-container" style="display: none;">
             <div class="login-card">
                 <h2 class="login-title">Login / Register</h2>
-                <button class="google-login-btn" onclick="loginWithGoogle()"><img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/action/google.svg"> Continue with Google</button>
+                <button class="google-login-btn" onclick="loginWithGoogle()">
+                    <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png"> 
+                    Continue with Google
+                </button>
                 <div class="divider">Or use Email</div>
                 <div class="login-input-group"><label>Email</label><input type="email" id="login-email" placeholder="আপনার ইমেইল দিন"></div>
                 <div class="login-input-group"><label>Password</label><input type="password" id="login-password" placeholder="পাসওয়ার্ড দিন"></div>
@@ -324,7 +326,6 @@
         });
     };
 
-    // ব্যানার স্লাইডার লজিক
     onSnapshot(doc(db, "siteSettings", "banners"), (snap) => {
         if(snap.exists()){
             const urls = snap.data().urls || [];
